--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="popup">
     <head>
-        <title>SupremeBot</title>
+        <title>Brown Dining Alert</title>
 
     <!--Handmade stylesheet-->
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -28,9 +28,9 @@
 
     </head>
     <body class="buttons" id="popup">
-        <h2><span class="makeRed">Page</span><span class="makeGreen">Loop</span></h2>
+        <h2>Food:</h2>
         <div class="row">
-            <button id="options-btn" class="btn-link">set loops</button>
+            <button id="options-btn" class="btn-link">set foods</button>
         </div>
     </body>
 
