saving food input + cleanup

--- a/options_page.html
+++ b/options_page.html
@@ -26,9 +26,6 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
-	<!--my js-->
-	<script src="cacheNumLoops.js"></script>
-
 	<!--alertify, for nice looking alerts-->
 	<script src="alertify.js-0.3.11/src/alertify.js"></script>
 
@@ -51,7 +48,11 @@
 
 	<div>
 	<p class="homeMainText">Welcome to Brown Dining Service.</p>
-	<p class="homeMainText">There are no foods at this point.
+	<p class="homeMainText">Input foods you want alerts on below, comma separated with no spaces between foods.</p>
+	<textarea id="foodInput", style="width:600px;height:60px">pancakes,beef stew</textarea>
+	<p></p>
+	<button id="save-btn">save</button>
+	<script src="saveData.js"></script>
     <button id="scrape-btn">scrape</button>
 	</div>
 	<div class="dividerLine"></div>
