bug fixes: scanning all dining halls + all mealtimes

--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,7 @@
     </head>
     <body class="buttons" id="popup">
         <h2>Food:</h2>
+        <div id="foodInject"></div>
         <div class="row">
             <button id="options-btn" class="btn-link">set foods</button>
         </div>
