text injection into popup

--- a/options_page.html
+++ b/options_page.html
@@ -51,9 +51,9 @@
 	<p class="homeMainText">Input foods you want alerts on below, comma separated with no spaces between foods.</p>
 	<textarea id="foodInput", style="width:600px;height:60px">pancakes,beef stew</textarea>
 	<p></p>
-	<button id="save-btn">save</button>
+	<button class="btn btn-primary" id="save-btn">save</button>
 	<script src="saveData.js"></script>
-    <button id="scrape-btn">scrape</button>
+    <button class="btn btn-success" id="scrape-btn">scrape</button>
 	</div>
 	<div class="dividerLine"></div>
 	<div>
