--- a/popup.html
+++ b/popup.html
@@ -15,9 +15,6 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
-    <!--popup javascript-->
-    <script type="text/javascript" src="popup.js"></script>
-
     <!--alertify, for nice looking alerts-->
     <script src="alertify.js-0.3.11/src/alertify.js"></script>
 
@@ -28,11 +25,12 @@
 
     </head>
     <body class="buttons" id="popup">
-        <h2>Food:</h2>
-        <div id="foodInject"></div>
+        <span id="foodInject"></span>
         <div class="row">
             <button id="options-btn" class="btn-link">set foods</button>
         </div>
     </body>
+    <!--popup javascript-->
+    <script type="text/javascript" src="popup.js"></script>
 
 </html>
