--- a/options_page.html
+++ b/options_page.html
@@ -42,7 +42,7 @@
 <body ng-controller="mainController as main">
 	<script src="angular.min.js"></script>
 	<script type="text/javascript" src = "AngularApp.js"></script>
-	<h2><span style="font-family:Helvetica">Brown Dining Alert</span><span style="color:#cccccc;font-size:22px;font-family:Verdana;font-weight:bold"> BETA</span></h2>
+	<!--<h2><span style="font-family:Helvetica">Brown Dining Alert</span><span style="color:#cccccc;font-size:22px;font-family:Verdana;font-weight:bold"> BETA</span></h2>-->
 
 	<div class="dividerLine"></div>
 
