improving popup interface

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,8 @@
     <body class="buttons" id="popup">
         <span id="foodInject"></span>
         <div class="row">
-            <button id="options-btn" class="btn-link">set foods</button>
+            <br>
+            <button id="options-btn" class="btn btn-info">set foods</button>
         </div>
     </body>
     <!--popup javascript-->
