moved refresh button

--- a/popup.html
+++ b/popup.html
@@ -27,10 +27,13 @@
     <body class="buttons" id="popup">
         <span id="foodInject"></span>
         <div class="row">
-            <button id="options-btn" class="btn btn-info">set foods</button>
+            <button class="btn btn-success" id="scrape-btn">refresh</button>
+            <button id="options-btn" class="btn btn-info">settings</button>
         </div>
     </body>
     <!--popup javascript-->
     <script type="text/javascript" src="popup.js"></script>
+    <!--scraping script-->
+    <script src="scrape.js"></script>
 
 </html>
