setting for desktop alerts

--- a/options_page.html
+++ b/options_page.html
@@ -48,6 +48,9 @@
 	<p class="homeMainText">Input foods you want alerts on below, comma separated with no spaces between foods.</p>
 	<textarea id="foodInput", style="width:600px;height:140px">pancakes,beef stew</textarea>
 	<p></p>
+	<div class="checkbox">
+ 		<label><input checked type="checkbox" id="enable_notifications">Enable desktop notifications</label>
+	</div>
 	<button class="btn btn-primary" id="save-btn">save</button>
 	<script src="saveData.js"></script>
 	</div>
