--- a/options_page.html
+++ b/options_page.html
@@ -39,7 +39,7 @@
 <body ng-controller="mainController as main">
 	<script src="angular.min.js"></script>
 	<script type="text/javascript" src = "AngularApp.js"></script>
-	<!--<h2><span style="font-family:Helvetica">Brown Dining Alert</span><span style="color:#cccccc;font-size:22px;font-family:Verdana;font-weight:bold"> BETA</span></h2>-->
+	<h2><span style="font-family:Helvetica">Brown Dining Alert</span><span style="color:#cccccc;font-size:22px;font-family:Verdana;font-weight:bold"> BETA</span></h2>
 
 	<div class="dividerLine"></div>
 
@@ -52,10 +52,10 @@
  		<label><input checked type="checkbox" id="enable_notifications">Enable desktop notifications</label>
 	</div>
 	<button class="btn btn-primary" id="save-btn">save</button>
-	<script src="saveData.js"></script>
 	</div>
 	<div class="dividerLine"></div>
 	<div>
-		<p>This is a project by John Randolph. All rights reserved.</p>
+		<p>This is a project by John Randolph. All rights reserved.<button class="btn btn-link" id="feedback-btn">Report bug or give feedback</button></p>
 	</div>
+	<script src="saveData.js"></script>
 </html>
