--- a/options_page.html
+++ b/options_page.html
@@ -44,8 +44,8 @@
 	<div class="dividerLine"></div>
 
 	<div>
-	<p class="homeMainText">Welcome to Brown Dining Service.</p>
-	<p class="homeMainText">Input foods you want alerts on below, comma separated with no spaces between foods.</p>
+	<p>Welcome to Brown Dining Service.</p>
+	<p>Input foods you want alerts on below, comma separated with no spaces between foods.</p>
 	<textarea id="foodInput", style="width:600px;height:140px">pancakes,beef stew</textarea>
 	<p></p>
 	<div class="checkbox">
