--- a/options_page.html
+++ b/options_page.html
@@ -56,7 +56,7 @@
 	<p ng-click="inputCtrl.terms = !inputCtrl.terms" id="tips-link"> Tips & Common Mistakes</p>
 	<p ng-show="inputCtrl.terms"> - Ensure that all your foods are separated by commas. Example: "blueberry pancakes, pie, chicken and waffles, donut".</p>
 	<p ng-show="inputCtrl.terms"> - Ensure that your spelling is correct</p>
-	<p ng-show="inputCtrl.terms"> - Ensure that you have WIFI and that <a href="https://dining.brown.edu">dining.brown.edu</a> is up.</p>
+	<p ng-show="inputCtrl.terms"> - Ensure that you have WIFI and that <a href="https://dining.brown.edu">dining.brown.edu</a> isn't down when refreshing.</p>
 	<p ng-show="inputCtrl.terms"> - You may put parts of food names, so "pancakes" will pick up "blueberry pancakes", "chololate chip pancakes", etc</p>
 	<p ng-show="inputCtrl.terms"> - It may be necessary to hit the refresh button multiple times</p>
 	<p ng-show="inputCtrl.terms"> - If you're having a bug or have feedback, please hit the bug/feedback button below!</p>
