deleting unnecessary files

--- a/options_page.html
+++ b/options_page.html
@@ -26,9 +26,6 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
-	<!--alertify, for nice looking alerts-->
-	<script src="alertify.js-0.3.11/src/alertify.js"></script>
-
 	<!-- include the core styles-->
 	<link rel="stylesheet" href="alertify.js-0.3.11/themes/alertify.core.css" />
 	<!-- include a theme, can be included into the core instead of 2 separate files -->
@@ -38,7 +35,6 @@
 </head>
 <body ng-controller="mainController as main">
 	<script src="angular.min.js"></script>
-	<script type="text/javascript" src = "AngularApp.js"></script>
 	<h2><span>Brown Dining Alert</span><span style="color:#cccccc;font-size:22px;font-family:Verdana;font-weight:bold"> BETA</span></h2>
 
 	<div class="dividerLine"></div>
@@ -53,13 +49,15 @@
 	</div>
 	<button class="btn btn-primary" id="save-btn">save</button>
 	</div>
-	<p ng-click="inputCtrl.terms = !inputCtrl.terms" id="tips-link"> Tips & Common Mistakes</p>
-	<p ng-show="inputCtrl.terms"> - Ensure that all your foods are separated by commas. Example: "blueberry pancakes, pie, chicken and waffles, donut".</p>
-	<p ng-show="inputCtrl.terms"> - Ensure that your spelling is correct</p>
-	<p ng-show="inputCtrl.terms"> - Ensure that you have WIFI and that <a href="https://dining.brown.edu">dining.brown.edu</a> isn't down when refreshing.</p>
-	<p ng-show="inputCtrl.terms"> - You may put parts of food names, so "pancakes" will pick up "blueberry pancakes", "chololate chip pancakes", etc</p>
-	<p ng-show="inputCtrl.terms"> - It may be necessary to hit the refresh button multiple times</p>
-	<p ng-show="inputCtrl.terms"> - If you're having a bug or have feedback, please hit the bug/feedback button below!</p>
+	<p id="tips-link"> Tips & Common Mistakes</p>
+	<div id="tips-div">
+	<p> - Ensure that all your foods are separated by commas. Example: "blueberry pancakes, pie, chicken and waffles, donut".</p>
+	<p> - Ensure that your spelling is correct</p>
+	<p> - Ensure that you have WIFI and that <a href="https://dining.brown.edu">dining.brown.edu</a> isn't down when refreshing.</p>
+	<p> - You may put parts of food names, so "pancakes" will pick up "blueberry pancakes", "chololate chip pancakes", etc</p>
+	<p> - It may be necessary to hit the refresh button multiple times</p>
+	<p> - If you're having a bug or have feedback, please hit the bug/feedback button below!</p>
+	</div>
 	<div class="dividerLine"></div>
 	<div>
 		<p>This is a project by John Randolph. All rights reserved.<button class="btn btn-link" id="feedback-btn">Report bug or give feedback</button></p>
