--- a/options_page.html
+++ b/options_page.html
@@ -18,18 +18,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 
 	<!--Boostrap -->
-	<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">	
-
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
 	<!-- Latest compiled JavaScript -->
-	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
-	<!-- include the core styles-->
-	<link rel="stylesheet" href="alertify.js-0.3.11/themes/alertify.core.css" />
-	<!-- include a theme, can be included into the core instead of 2 separate files -->
-	<link rel="stylesheet" href="alertify.js-0.3.11/themes/alertify.default.css" />
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 	<title>Brown Dining Alert</title>
 </head>
