--- a/popup.html
+++ b/popup.html
@@ -6,22 +6,11 @@
     <!--Handmade stylesheet-->
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <!--Boostrap-->
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-    <!--jquery-->
-    <script src="../jquery.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
-    <!--alertify, for nice looking alerts-->
-    <script src="alertify.js-0.3.11/src/alertify.js"></script>
-
-    <!-- include the core styles-->
-    <link rel="stylesheet" href="alertify.js-0.3.11/themes/alertify.core.css" />
-    <!-- include a theme, can be included into the core instead of 2 separate files -->
-    <link rel="stylesheet" href="alertify.js-0.3.11/themes/alertify.default.css" />
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     </head>
     <body class="buttons" id="popup">
