--- a/options_page.html
+++ b/options_page.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-	John Randolph
-	Lakeside school
-	CS5
-	Supreme Bot
-	2017
--->
+
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" ng-app="supreme">
 
 <head>
@@ -18,37 +12,37 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 
 	<!--Boostrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">	
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
 	<title>Brown Dining Alert</title>
 </head>
 <body ng-controller="mainController as main">
-	<script src="angular.min.js"></script>
-	<h2><span>Brown Dining Alert</span><span style="color:#cccccc;font-size:22px;font-family:Verdana;font-weight:bold"> BETA</span></h2>
-
+	<h2><span>Brown Dining Alert</span><span id="beta"> BETA</span></h2>
 	<div class="dividerLine"></div>
-
 	<div>
-	<h3>Favorite foods</h3>
-	<p>Enter foods <strong>comma separated</strong>.</p>
-	<textarea id="foodInput", style="width:600px;height:140px">pancakes,beef stew</textarea>
-	<p></p>
-	<div class="checkbox">
- 		<label><input checked type="checkbox" id="enable_notifications">Enable desktop notifications</label>
-	</div>
-	<button class="btn btn-primary" id="save-btn">save</button>
+		<h3>Favorite foods</h3>
+		<p>Enter foods <strong>comma separated</strong>.</p>
+		<textarea id="foodInput", style="width:600px;height:140px">pancakes,beef stew</textarea>
+		<p></p>
+		<div class="checkbox">
+	 		<label><input checked type="checkbox" id="enable_notifications">Enable desktop notifications</label>
+		</div>
+		<button class="btn btn-primary" id="save-btn">save</button>
 	</div>
 	<p id="tips-link"> Tips & Common Mistakes</p>
-	<div id="tips-div">
-	<p> - Ensure that all your foods are separated by commas. Example: "blueberry pancakes, pie, chicken and waffles, donut".</p>
-	<p> - Ensure that your spelling is correct</p>
-	<p> - Ensure that you have WIFI and that <a href="https://dining.brown.edu">dining.brown.edu</a> isn't down when refreshing.</p>
-	<p> - You may put parts of food names, so "pancakes" will pick up "blueberry pancakes", "chololate chip pancakes", etc</p>
-	<p> - It may be necessary to hit the refresh button multiple times</p>
-	<p> - If you're having a bug or have feedback, please hit the bug/feedback button below!</p>
+	<div id="tips-div" style="display:none">
+		<p> - Ensure that all your foods are separated by commas. Example: "blueberry pancakes, pie, chicken and waffles, donut".</p>
+		<p> - Ensure that your spelling is correct</p>
+		<p> - Ensure that you have WIFI and that <a href="https://dining.brown.edu">dining.brown.edu</a> isn't down when refreshing.</p>
+		<p> - You may put parts of food names, so "pancakes" will pick up "blueberry pancakes", "chololate chip pancakes", etc</p>
+		<p> - It may be necessary to hit the refresh button multiple times</p>
+		<p> - If you're having a bug or have feedback, please hit the bug/feedback button below!</p>
 	</div>
 	<div class="dividerLine"></div>
 	<div>
