removed background.js, scrape daily, and changed desktop notifs

--- a/options_page.html
+++ b/options_page.html
@@ -28,10 +28,10 @@
 	<div>
 		<h3>Favorite foods</h3>
 		<p>Enter foods <strong>comma separated</strong>.</p>
-		<textarea id="foodInput", style="width:600px;height:140px">pancakes,beef stew</textarea>
+		<textarea id="foodInput", style="width:600px;height:140px">chicken, pancakes</textarea>
 		<p></p>
 		<div class="checkbox">
-	 		<label><input checked type="checkbox" id="enable_notifications">Enable desktop notifications</label>
+	 		<label><input checked type="checkbox" id="enable_notifications">Enable daily desktop notifications</label>
 		</div>
 		<button class="btn btn-primary" id="save-btn">save</button>
 	</div>
